Meetings map z-index fixes

--- a/our-brothers-web/src/app/components/meetings-map-navigator/meetings-map-navigator.component.scss
+++ b/our-brothers-web/src/app/components/meetings-map-navigator/meetings-map-navigator.component.scss
@@ -12,7 +12,7 @@
   }
 
   .title {
-    font-family: "arbel";
+    font-family: 'arbel';
     font-size: 18px;
   }
 
@@ -25,7 +25,7 @@
     width: 50px;
     height: 28px;
     font-size: 15px;
-    font-family: "arbel";
+    font-family: 'arbel';
     color: rgb(0, 115, 109);
     background-color: white;
     cursor: pointer;
