--- a/our-brothers-web/src/app/components/meetings-map/meetings-map.component.scss
+++ b/our-brothers-web/src/app/components/meetings-map/meetings-map.component.scss
@@ -8,7 +8,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 3;
   }
 
   .map {
